# Arthur

./: .clang-format  BugStudy.md  CMakeLists.txt
include/: ast.hpp  config.hpp  node.hpp  type.hpp  utils.hpp  visitor.hpp
src/: config.cpp  type.cpp  utils.cpp
tests/: CMakeLists.txt  testTypes.cpp
